--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "mocha --compilers js:babel-core/register src/test/test.js",
     "start": "node ./src/server/app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RUB-NDS/dpreikschat-syncenc.git"
+  },
+  "keywords": [
+    "ot",
+    "quill",
+    "end-to-end encryption"
+  ],
+  "author": "Dominik Preikschat",
   "dependencies": {
     "body-parser": "~1.18.2",
     "connect": "^1.9.2",
@@ -24,6 +35,7 @@
     "xmldom": "^0.1.27"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -31,6 +43,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
+    "mocha": "^4.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0"
   }
