--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect": "^1.9.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "eventemitter3": "^3.0.0",
     "express": "~4.15.5",
     "http": "0.0.0",
     "jade": "~1.11.0",
