--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sharedb": "^1.0.0-beta.7",
     "websocket-json-stream": "0.0.3",
     "ws": "^3.3.2",
-    "xml-enc": "file:../xml-enc",
+    "xml-enc": "file:../ottype-xml-enc",
     "xmldom": "^0.1.27"
   },
   "devDependencies": {
