--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   "author": "Dominik Preikschat",
   "dependencies": {
     "body-parser": "~1.18.2",
-    "connect": "^1.9.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "eventemitter3": "^3.0.0",
     "express": "~4.15.5",
     "http": "0.0.0",
-    "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "quill": "^1.3.3",
     "quill-delta": "^3.6.2",
@@ -33,7 +31,8 @@
     "websocket-json-stream": "0.0.3",
     "ws": "^3.3.2",
     "xml-enc": "file:../ottype-xml-enc",
-    "xmldom": "^0.1.27"
+    "xmldom": "^0.1.27",
+    "xpath": "0.0.27"
   },
   "devDependencies": {
     "assert": "^1.4.1",
@@ -44,6 +43,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
+    "jsdom": "11.5.1",
+    "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0"
