--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "test": "mocha --compilers js:babel-core/register src/test/test.js",
-    "start": "node ./src/server/app.js"
+    "start": "node ./src/server/app.js",
+    "startTestServer": "node ./src/server/testApp.js",
+    "build": "webpack",
+    "buildTest": "webpack --config webpack.test.config.js"
   },
   "repository": {
     "type": "git",
@@ -35,16 +38,14 @@
     "xpath": "0.0.27"
   },
   "devDependencies": {
-    "assert": "^1.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
-    "jsdom": "11.5.1",
-    "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0"
