--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.8",
+    "extract-text-webpack-plugin": "^3.0.2",
     "mocha": "^4.0.1",
+    "style-loader": "^0.19.1",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0"
   }
