--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "xpath": "0.0.27"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
