--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eventemitter3": "^3.1.0",
     "express": "~4.15.5",
     "http": "0.0.0",
+    "idb-keyval": "^3.0.5",
     "morgan": "~1.9.0",
     "npm": "^6.2.0",
     "quill": "^1.3.3",
